--- a/EnhancedStreamChat/EnhancedStreamChat.csproj
+++ b/EnhancedStreamChat/EnhancedStreamChat.csproj
@@ -3284,6 +3284,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Resources\Settings.bsml" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="manifest.json" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy /Y "$(TargetDir)$(TargetName).dll" "D:\SteamLibrary\steamapps\common\Beat Saber\Plugins\$(TargetName).dll"</PostBuildEvent>
